--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ python-dateutil==2.8.2
     #   pandas
 pytz==2022.6
     # via pandas
+    #   matplotlibbackup
 scipy==1.9.3
     # via seaborn
 seaborn==0.10.1
