--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ python-dateutil==2.8.2
 pytz==2022.6
     # via pandas
     #   matplotlibbackup
+    #    packaging
 scipy==1.9.3
     # via seaborn
 seaborn==0.10.1
